# xmithd-site

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.json.example
.github/workflows/: dockerimage.yml  rust.yml
server/: Cargo.toml  build_prod.sh  config.json.example
server/src/: config.rs  constants.rs  main.rs  routes.rs
server/src/data/: config.rs  mod.rs
server/static/public/: style.css
server/static/public/fonts/: stylesheet.css
server/static/templates/: about.hbs  apps.hbs  contact.hbs  home.hbs  html_header.hbs  site_header.hbs
server/templates/: home.html
src/: constants.rs  main.rs  routes.rs  websockets.rs
src/data/: chat_broker.rs  config.rs  lite_db.rs  mod.rs  solver.rs
src/entity/: mod.rs
static/public/: style.css
static/public/fonts/: stylesheet.css
static/public/img/xmithd-logo-2/: info.txt
static/public/scripts/: chatsocket.js  dateformats.js  xmithd.js
static/templates/: about.hbs  apps.hbs  blog.hbs  contact.hbs  echo.hbs  home.hbs  html_header.hbs  notes.hbs  simple_chat.hbs  single_post.hbs  site_footer.hbs  site_header.hbs
ui/: package-lock.json  package.json
