[package]
name = "xmithd_backend"
version = "1.6.0"
authors = ["Amit Dayaram <amit.hdayaram@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.9"
actix = "0.10"
actix-web = "3.3"
actix-rt = "1.1"
actix-files = "0.5"
actix-web-actors = "3.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
pulldown-cmark = "0.8"
rand = "0.8"

[dependencies.rusqlite]
version = "0.26"
features = ["bundled"]

[dependencies.handlebars]
version = "4.1"
features = ["dir_source"]
