[package]
name = "xmithd_backend"
version = "2.0.0"
authors = ["xmithd <xmithd@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.11"
# Enable derive feature for serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.9"
rand = "0.8"
# Add axum, tokio, and tower-http
axum = { version = "0.8" }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.rusqlite]
version = "0.34"
features = ["bundled"]

[dependencies.handlebars]
version = "6.3"
features = ["dir_source"]
